terraform/modules/security-group/main.tf
resource "aws_security_group" "healthcare_sg" {

  name = "${var.project_name}-${var.environment}-sg"

  description = "Security Group for Healthcare Application"

  vpc_id = var.vpc_id

  tags = merge(
    var.common_tags,
    {
      Name = "${var.project_name}-${var.environment}-sg"
    }
  )

}
resource "aws_vpc_security_group_ingress_rule" "ssh" {

  security_group_id = aws_security_group.healthcare_sg.id

  cidr_ipv4 = var.ssh_ingress_cidr

  from_port = 22

  to_port = 22

  ip_protocol = "tcp"

  description = "SSH Access"

}
resource "aws_vpc_security_group_ingress_rule" "http" {

  security_group_id = aws_security_group.healthcare_sg.id

  cidr_ipv4 = "0.0.0.0/0"

  from_port = 80

  to_port = 80

  ip_protocol = "tcp"

  description = "HTTP"

}
resource "aws_vpc_security_group_ingress_rule" "https" {

  security_group_id = aws_security_group.healthcare_sg.id

  cidr_ipv4 = "0.0.0.0/0"

  from_port = 443

  to_port = 443

  ip_protocol = "tcp"

  description = "HTTPS"

}
resource "aws_vpc_security_group_egress_rule" "all_outbound" {

  security_group_id = aws_security_group.healthcare_sg.id

  cidr_ipv4 = "0.0.0.0/0"

  ip_protocol = "-1"

  description = "Allow all outbound traffic"

}
